card header component to fix align

--- a/src/assets/less/theme.less
+++ b/src/assets/less/theme.less
@@ -57,6 +57,14 @@
   }
 }
 
+.card-header-primary {
+  .ant-card-head {
+    background: @primary-color;
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+    color: #ffffff;
+  }
+}
+
 .button-color-dust {
   background-color: #F5222D;
   border-color: #F5222D;
